<resources>
    <!--string name="app_name">HiOSMobile</string-->
    <string name="app_name">Classic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HiOS Mobile by The Highland Cafe(tm)</string>
    <string name="nav_header_subtitle">Quality Food, at it\'s Best</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <!--string name="action_changelog">"What's New?"</string-->
    <string name="action_changelog"> </string>

    <!--Navigation Drawer options strings-->
    <string name="menu_home">Home</string>

    <string name="nav_table">Experiments</string>

    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_updatenotifications">Update Notifications</string>

    <string name="menu_locations">Food</string>

    <string name="menu_offers">Offers</string>
    <string name="menu_memberships">Subscriptions</string>

    <string name="menu_worsteastern">Hotel</string>

    <string name="menu_termsconditions">Terms &amp; Conditions</string>
    <string name="nav_help">Help &amp; More</string>

    <string name="menu_flights">Your Journey</string>
    <string name="menu_carhire">Car Hire</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_taxi">Taxi</string>
    <string name="menu_foodhall">Food Shopping</string>
    <string name="menu_social">Social</string>
    <string name="menu_comingsoon">Coming Soon</string>
    <string name="menu_support">Customer Support</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_extras">Experiments</string>

    <!--UPDATE DOWNLOADER/INSTALLER STRINGS-->
    <!--string name="menu_updates">Update HiOSMobile</string-->

    <!--HIOSUNIFIED 2FA STRINGS-->
    <string name="menu_hiosunified">Secure Login</string>

    <!-- Text which displays the version number in the navigation drawer -->
    <string name="versionNumber">Version 1.5</string>

    <!-- Preference Titles -->
    <string name="messages_header">Website</string>
    <string name="sync_header">Theme</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Look for updates on website</string>
    <string name="reply_title">Visit our website</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="darkThemeTitle">Dark Theme</string>
    <string name="title_activity_no_internet">ActivityNoInternet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="noInternet">No Internet Connection</string>
    <string name="noInternetSubtitle">Please check your network connection and try again.\n\n\nOnce connected, restart HiOSMobile to continue your journey</string>
    <string name="retry">Retry</string>

    <string name="title_activity_internet">InternetActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_internet_error">InternetError</string>

    <string name="recommended">Recommended</string>

    <!-- URLs -->
    <string name="updates_url" translatable="false">https://sites.google.com/view/hios-by-thc/download#h.51zx1qe3xfrl</string>
    <string name="autoupdate_url">https://sites.google.com/view/hios-by-thc/download/autoupdate</string>
    <string name="whatsnew_url" translatable="false">https://sites.google.com/view/hios-by-thc/download#h.evwm3pfxwkdn</string>
    <string name="notifications_url" translatable="false">https://whatsapp.com/channel/0029Va8U5lXISTkDAhk4bj3J</string>
    <string name="hiosmusic_url" translatable="false">https://sites.google.com/view/hios-by-thc/download-hiosmusic#h.ogr0r3hzljpf</string>
    <string name="hiosweather_url" translatable="false">https://sites.google.com/view/hios-by-thc/hiosweather#h.rynyo42t0yud</string>
    <string name="hiosdesktop_url">https://sites.google.com/view/hios-by-thc/hiosdesktop</string>
    <string name="hienterprises_url" translatable="false">https://sites.google.com/view/thehighlandcafe</string>
    <string name="support_url" translatable="false">https://sites.google.com/view/thehighlandcafe/customer-support</string>

    <string name="facebook_url">https://www.facebook.com/profile.php?id=100095224335357</string>
    <string name="facebook_nuggetdev_url">https://www.facebook.com/profile.php?id=61558122144435</string>

    <string name="instagram_url">https://www.instagram.com/thehighlandcafe/</string>
    <string name="instagram_nuggetdev_url">https://www.instagram.com/nuggetdev/</string>

    <string name="threads_url">https://www.threads.net/@thehighlandcafe</string>
    <string name="thehighlandcafe_url">https://sites.google.com/view/hicafe</string>
    <string name="nuggetdev_url">https://sites.google.com/view/nuggetdev</string>
    <string name="hios_url">https://sites.google.com/view/hios-by-thc</string>
    <string name="hiossocial_url">https://sites.google.com/view/hios-by-thc/hisocial</string>
    <string name="privacypolicy_url">https://sites.google.com/view/hios-by-thc/privacy-policy</string>
    <string name="github_release_url">https://github.com/aarjay123/harmony/releases/latest</string>
    <string name="github_prerelease_url">https://github.com/aarjay123/harmony/releases</string>
    <string name="direct_download_url">https://github.com/aarjay123/harmony/releases/latest/download/hiosmobile.apk</string>
    <string name="hirewards_url">https://sites.google.com/view/hirewards#h.j6t1hqgf8fxc</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_feedback">Send Feedback</string>
    <string name="title_activity_tc">Terms and Conditions</string>
    <string name="title_activity_support">Customer Support</string>

    <string name="download_menus">Download Menus</string>

    <!-- Settings Titles -->
    <string name="updates_header">Updates</string>

    <string name="apps_header">Apps and Services</string>

    <string name="websites_header">Websites</string>

    <string name="about_app">About HiOSMobile</string>

    <string name="socials_header">Socials</string>

    <string name="privacy_title">Your Privacy</string>
    <string name="privacypolicy_header">Privacy Policy</string>

    <!-- Updates Preferences -->
    <string name="update_category">Update the HiOSMobile</string>

    <string name="updates_title">Manually Update the HiOSMobile</string>
    <string name="updates_summary">Download the latest app APK installer file.\n\n1. Tap here, tap \'Download Anyway\' on the popup, since the HiOSMobile is safe.\n2. Allow your browser to \'Install Unknown Apps\', select \'Open\' and finally \'update\'.\n\nThis Version: 2.5.2</string>
    <string name="updates_description">Tap the button below to download the latest HiOSMobile version to your Downloads folder.</string>
    <string name="updates_button">Download HiOSMobile File</string>

    <string name="updates_prerelease_title">Download Unstable Version</string>
    <string name="updates_prerelease_summary">Download the latest HiOSMobile pre-release version.\n\nOn the releases page on GitHub, find one with the \'pre-release\' tag.\n\nCAUTION: Pre-releases can be unstable!</string>

    <string name="autoupdate_title">Auto-Update the HiOSMobile</string>
    <string name="autoupdate_summary">Learn how to update the HiOSMobile automatically on our website.</string>

    <string name="notifications_category">Update notifications and more</string>

    <string name="notifications_title">Update Notifications</string>
    <string name="notifications_summary">Join our WhatsApp Channel to get notified every time we update the HiOSMobile.</string>

    <string name="whatsnew_title">What\'s New?</string>

    <!-- Apps Preferences -->
    <string name="hiosweather_title">HiOSWeather</string>
    <string name="hiosweather_summary">This is our weather app, which simply allows you to check the weather, use widgets, and more!</string>

    <string name="hirewards_title">HiRewards</string>
    <string name="hirewards_summary">Wanting to earn rewards for visiting your favourite brands by The Highland Cafe™? No probs, as you can now download HiRewards on your smartphone!</string>

    <string name="nuggetdev_apps_title">Other software by nuggetdev</string>
    <string name="nuggetdev_apps_summary">Take a look at other great apps, software, and services also by nuggetdev!</string>

    <string name="windows">Windows Apps</string>

    <string name="hiosdesktop_title">HiOSMobile for Windows</string>
    <string name="hiosdesktop_summary">This is our newest app, this is a version of the HiOSMobile designed for Windows 10 and 11!</string>

    <!-- Websites Preferences -->
    <string name="hienterprises_title">The Highland Cafe™ Enterprises Website</string>
    <string name="nuggetdev_website_title">nuggetdev Website</string>
    <string name="hios_title">HiOSMobile Website</string>
    <string name="thehighlandcafe_title">The Highland Cafe™ Website</string>

    <!-- Socials Preferences -->
    <string name="thehighlandcafe_category">The Highland Cafe™ Enterprises</string>

    <string name="facebook_title">The Highland Cafe™ Enterprises Facebook Page</string>
    <string name="threads_title">The Highland Cafe™ Enterprises Threads Profile</string>
    <string name="instagram_title">The Highland Cafe™ Enterprises Instagram Profile</string>
    <string name="instagram_summary">\@thehighlandcafe</string>

    <string name="nuggetdev_category">nuggetdev</string>

    <string name="facebook_nuggetdev_title">nuggetdev Facebook Page</string>
    <string name="instagram_nuggetdev_title">nuggetdev Instagram Profile</string>
    <string name="instagram_nuggetdev_summary">\@nuggetdev</string>

    <string name="title_activity_help_center">Help</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_helpcenter">helpcenterActivity</string>

    <!-- Preference Titles -->
    <string name="securelogin_header">Secure Login</string>
    <string name="internet_header">WiFi and Internet</string>

    <!--Help Center Strings -->
    <string name="tutorial_title">How to use the HiOSMobile</string>
    <string name="tutorial_header">Navigation Tutorial</string>
    <string name="tutorial_summary">Have a look at our tutorial animation to see how to get around the HiOSMobile.</string>

    <string name="general_title">General Help</string>

    <!-- Notification Stuff -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <string name="placeholder">Placeholder Text</string>


</resources>