<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nugget.hios.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_worsteastern"
        android:name="com.nugget.hios.ui.worsteastern.WorsteasternFragment"
        android:label="@string/menu_worsteastern"
        tools:layout="@layout/fragment_worsteastern" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.nugget.hios.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <!--fragment
        android:id="@+id/nav_settings"
        android:name="com.nugget.hios.SettingsActivity"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" /-->

    <fragment
        android:id="@+id/nav_help"
        android:name="com.nugget.hios.ui.help.HelpFragment"
        android:label="@string/nav_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.nugget.hios.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_termsconditions"
        android:name="com.nugget.hios.ui.termsconditions.TermsConditionsFragment"
        android:label="@string/menu_termsconditions"
        tools:layout="@layout/fragment_termsconditions" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.nugget.hios.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        android:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_foodhall"
        android:name="com.nugget.hios.ui.foodhall.FoodhallFragment"
        android:label="@string/menu_foodhall"
        android:layout="@layout/fragment_foodhall" />

    <fragment
        android:id="@+id/nav_comingsoon"
        android:name="com.nugget.hios.ui.comingsoon.ComingsoonFragment"
        android:label="@string/menu_comingsoon"
        android:layout="@layout/fragment_comingsoon" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.nugget.hios.ui.support.SupportFragment"
        android:label="@string/menu_support"
        android:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/nav_brands"
        android:name="com.nugget.hios.ui.brands.BrandsFragment"
        android:label="@string/menu_brands"
        android:layout="@layout/fragment_brands" />
</navigation>